[gd_scene load_steps=9 format=3 uid="uid://dsuurowy2hh8c"]

[ext_resource type="Texture2D" uid="uid://bxfouy8wkprpg" path="res://assets/world/screenshot (3).png" id="1_k7nd8"]
[ext_resource type="Script" uid="uid://bx63tua4ffo4o" path="res://scripts/mainmenu.gd" id="1_wddec"]
[ext_resource type="Texture2D" uid="uid://oj77dfmtirv6" path="res://assets/world/house and outdoor decorations/Background.png" id="2_wddec"]
[ext_resource type="Texture2D" uid="uid://bogpkhl0thnuv" path="res://assets/world/house and outdoor decorations/GRASS TILE.png" id="3_kxqoy"]
[ext_resource type="FontFile" uid="uid://fi4f00g8lump" path="res://assets/font/aa.ttf" id="4_lo8gg"]

[sub_resource type="LabelSettings" id="LabelSettings_ahh6b"]
font = ExtResource("4_lo8gg")
font_size = 46

[sub_resource type="LabelSettings" id="LabelSettings_8qnor"]
font = ExtResource("4_lo8gg")
font_size = 211

[sub_resource type="LabelSettings" id="LabelSettings_viepn"]
font = ExtResource("4_lo8gg")
font_size = 56
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wddec")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Node" type="Node" parent="ColorRect"]

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(581.75, 446)
scale = Vector2(17.6439, 8.59756)
texture = ExtResource("1_k7nd8")
region_enabled = true
region_rect = Rect2(168, 201, 66, 41)

[node name="Background" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(-431, 306)
texture = ExtResource("2_wddec")

[node name="Background26" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(82, 67)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background27" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(152, 96)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background28" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(216, 68)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background29" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(289, 136)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background30" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(366, 81)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background31" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(452, 127)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background32" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(574, 81)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background33" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(660, 125)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background34" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(759, 85)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background35" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(873, 129)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background36" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(781, 194)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background37" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(586, 197)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background38" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(383, 197)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background39" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(224, 197)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background40" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(102, 147)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background41" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(74, 204)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background42" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(158, 248)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background43" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(288, 248)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background44" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(492, 244)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background45" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(690, 243)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background46" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(864, 247)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background47" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(970, 200)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background48" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(977, 84)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background49" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(1075, 126)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background50" type="Sprite2D" parent="ColorRect/Node"]
z_index = 2
position = Vector2(1076, 246)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(267, 104, 42, 10)

[node name="Background24" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(803, 429)
scale = Vector2(2.22609, 2.22609)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(0, -1, 32, 64)

[node name="Background25" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(921, 432)
scale = Vector2(2.22609, 2.22609)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(0, -1, 32, 64)

[node name="Background6" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(373, 398)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background8" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(369, 529)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background9" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(513, 403)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background10" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(718, 487)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background11" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(707, 395)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background12" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(852, 479)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background13" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(895, 369)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background14" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(1008, 463)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background15" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(1044, 370)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background16" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(577, 350)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background17" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(479, 548)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background19" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(669, 573)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background20" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(855, 565)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background21" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(1050, 579)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background22" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(1111, 470)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="Background23" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(430, 473)
texture = ExtResource("2_wddec")
region_enabled = true
region_rect = Rect2(95, 27, 54, 36)

[node name="GrassTile" type="Sprite2D" parent="ColorRect/Node"]
position = Vector2(588, 162)
scale = Vector2(74.75, 19.6875)
texture = ExtResource("3_kxqoy")

[node name="Label" type="Label" parent="."]
z_index = 210
layout_mode = 0
offset_left = 66.0
offset_top = 76.0
offset_right = 106.0
offset_bottom = 99.0
scale = Vector2(1.1566, 0.903607)
text = "WAKE UP"
label_settings = SubResource("LabelSettings_ahh6b")

[node name="Label2" type="Label" parent="."]
z_index = 225
layout_mode = 0
offset_left = 62.0
offset_top = 152.0
offset_right = 568.0
offset_bottom = 266.0
text = "mori"
label_settings = SubResource("LabelSettings_8qnor")

[node name="Label4" type="Label" parent="."]
z_index = 270
layout_mode = 0
offset_left = 74.0
offset_top = 472.0
offset_right = 309.0
offset_bottom = 503.0
text = "Credits"
label_settings = SubResource("LabelSettings_viepn")

[node name="Label3" type="Label" parent="."]
z_index = 270
layout_mode = 0
offset_left = 74.0
offset_top = 388.0
offset_right = 208.0
offset_bottom = 419.0
text = "PLAY"
label_settings = SubResource("LabelSettings_viepn")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 190
layout_mode = 0
offset_left = 74.0
offset_top = 378.0
offset_right = 205.0
offset_bottom = 427.0

[node name="Button3" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 190
layout_mode = 0
offset_left = 74.0
offset_top = 472.0
offset_right = 302.0
offset_bottom = 510.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
